[package]
name = "jupiter"
version = "0.5.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
computer_config = {path = "./computer_config"}
computer = {path="./computer"}
winit = "0.27.2"
pixels = "0.9.0"
