[package]
name = "computer"
version = "0.8.2137"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
computer_config = {path="../computer_config"}
device_query = "0.2.8"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
